2012-01-31  Nick Alcock  <nick.alcock@oracle.com>

	* cmd/dtrace.c (main): New argument for -t option, disabling
	library path changes for testing of installed dtrace.
	* runtest.sh (FORCE_OUT): Use it.

	* dtrace.spec: Rename to...
	* dtrace-utils.spec: ... this, and update.

2012-01-16  Nick Alcock  <nick.alcock@oracle.com>

	* test/regression/tst.exit_panic.d: New test for crash on
	destructive exit.
	* test/unittest/drops/drp.DTRACEDROP_STKSTROVERFLOW.d: No longer
	expected to fail.

2012-01-12  Nick Alcock  <nick.alcock@oracle.com>

	* cmd/dtrace.c (main): Don't emit the inter-loop blank line
	when testing.

	* test/dt_test/aggcount.r: Adjust accordingly.
	* test/dtrace/end.r: Likewise.
	* test/dtrace/error.r: Likewise.
	* test/intro/counter.r: Likewise.
	* test/intro/trussrw.r: Likewise.
	* test/unittest/drops/drp.DTRACEDROP_PRINCIPAL.r: Likewise.

2012-01-11  Nick Alcock  <nick.alcock@oracle.com>

	* INCOMPATIBILITIES: sdt is implemented now: mention fbt instead.

2012-01-11  Nick Alcock  <nick.alcock@oracle.com>

	Testsuite cleanups and new bugs.

	* COMMANDLINE-OPTIONS: -c and ranges in -i are broken.

	* test/builtin/curthread.d: XFAIL: needs CTF.
	* test/builtin/gid.d: Likewise.
	* test/builtin/uid.d: Likewise.
	* test/unittest/buffering/tst.ring3.d: Likewise.

	* test/dtrace/end.d: Don't rely on racy timeout timings.
	* test/dtrace/end.r: Adjust accordingly.

	* test/intro/counter.d: Print consistent output.

	* test/intro/trussrw.d: Don't trace read()/write() generated by the
	inside of ld.so.
	* test/intro/trussrw.r: Adjust accordingly.
	* test/triggers/mmap.c: Likewise.

	* test/out/printa.d: Use the tick-n provider, which exists.

	* test/unittest/buffering/tst.ring1.r: Adjust expected results.
	* test/unittest/funcs/err.badbcopy4.r: Likewise.
	* test/unittest/funcs/err.badbcopy5.r: Likewise.
	* test/unittest/pointers/err.BadAlign.r: Likewise.

	* test/unittest/funcs/tst.index.r: Fix Perl path typo.
